--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="./blocks/index.css">
   <title>BR Architects</title>
 </head>
 <body>
@@ -18,7 +18,6 @@
     </nav>
   </header>
   <main>
-    Hello world!
   </main>
 </body>
 </html>
