--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     </nav>
   </header>
   <main>
+    <section class="hero">
+      <h1 class="hero__title"><em class="hero__logo">BR</em> Architects</h1>  
+    </section>
   </main>
 </body>
 </html>
