started projects section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,29 @@
     <section class="hero">
       <h1 class="hero__title"><em class="hero__logo">BR</em> Architects</h1>  
     </section>
+    <section class="projects">
+      <h2 class="section-title">Projects</h2>
+      <ul class="projects__list">
+        <li class="projects__item">
+          <figure class="projects__image-container">
+            <img class="projects__image" src="./images/house1.jpeg" alt="Casa com 2 andares, uma ponte de madeira">
+            <figcaption class="projects__caption">Summer House</figcaption>
+          </figure>
+        </li>
+        <li class="projects__item">
+          <figure class="projects__image-container">
+            <img class="projects__image" src="./images/house1.jpeg" alt="Casa com 2 andares, uma ponte de madeira">
+            <figcaption class="projects__caption">Summer House</figcaption>
+          </figure>
+        </li>
+        <li class="projects__item">
+          <figure class="projects__image-container">
+            <img class="projects__image" src="./images/house1.jpeg" alt="Casa com 2 andares, uma ponte de madeira">
+            <figcaption class="projects__caption">Summer House</figcaption>
+          </figure>
+        </li>
+      </ul>
+    </section>
   </main>
 </body>
 </html>
