finishing section projects

--- a/index.html
+++ b/index.html
@@ -42,6 +42,36 @@
             <figcaption class="projects__caption">Summer House</figcaption>
           </figure>
         </li>
+        <li class="projects__item">
+          <figure class="projects__image-container">
+            <img class="projects__image" src="./images/house1.jpeg" alt="Casa com 2 andares, uma ponte de madeira">
+            <figcaption class="projects__caption">Summer House</figcaption>
+          </figure>
+        </li>
+        <li class="projects__item">
+          <figure class="projects__image-container">
+            <img class="projects__image" src="./images/house1.jpeg" alt="Casa com 2 andares, uma ponte de madeira">
+            <figcaption class="projects__caption">Summer House</figcaption>
+          </figure>
+        </li>
+        <li class="projects__item">
+          <figure class="projects__image-container">
+            <img class="projects__image" src="./images/house1.jpeg" alt="Casa com 2 andares, uma ponte de madeira">
+            <figcaption class="projects__caption">Summer House</figcaption>
+          </figure>
+        </li>
+        <li class="projects__item">
+          <figure class="projects__image-container">
+            <img class="projects__image" src="./images/house1.jpeg" alt="Casa com 2 andares, uma ponte de madeira">
+            <figcaption class="projects__caption">Summer House</figcaption>
+          </figure>
+        </li>
+        <li class="projects__item">
+          <figure class="projects__image-container">
+            <img class="projects__image" src="./images/house1.jpeg" alt="Casa com 2 andares, uma ponte de madeira">
+            <figcaption class="projects__caption">Summer House</figcaption>
+          </figure>
+        </li>
       </ul>
     </section>
   </main>
